Test Org - Speridian/src/objects/BA_TransportHistory__c.object
<CustomObject>
    <fields>
        <fullName>Transportation_Type__c</fullName>
        <label>Transportation Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Test A</fullName>
                </value>
                <value>
                    <fullName>Test B</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ba_CaseNumber__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Related Service Request</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Transport History</relationshipLabel>
        <relationshipName>Transport_History</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ba_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Transport History</relationshipLabel>
        <relationshipName>Transport_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ba_CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ba_EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ba_StartDate__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ba_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Test A</fullName>
                </value>
                <value>
                    <fullName>Test B</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Transport History</label>
    <nameField>
        <displayFormat>REQ-{0000000}</displayFormat>
        <label>Referrence Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transport History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>